refactor (task): change the "get" service method to support changes made to request and response behaviors